--- a/windows/Makefile.wc
+++ b/windows/Makefile.wc
@@ -109,7 +109,7 @@ COMPAT=-DNO_SECUREZEROMEMORY -dNO_GSSAPI -DNO_IPV6 -DNO_MULTIMON -DNO_HTMLHELP -
 
 CFLAGS = -za99 -bt=nt -D_WINDOWS -DWIN32S_COMPAT \
 		-D_NO_OLDNAMES -D__USE_MINGW_ANSI_STDIO=1 -I.././ \
-		-I../charset/ -I../windows/ -I../unix/
+		-I../charset/ -I../windows/ -I../unix/ -od
 LDFLAGS = -s
 RCFLAGS = $(RCINC) --define WIN32=1 --define _WIN32=1 --define WINVER=0x0400 \
 		-I.././ -I../charset/ -I../windows/ -I../unix/
